language/move-lang/tests/move_check/parser/module_missing_lbrace.exp
error: 

   ┌── tests/move_check/parser/module_missing_lbrace.move:2:5 ───
   │
 2 │     f() {}
   │     ^ Unrecognized Token: f
   ·
 2 │     f() {}
   │     - Expected:  "::", ";", "as", "{",
   │

